# EBox

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
bench/: bf.h  main.c
lib/: CMakeLists.txt
lib/bf/: CMakeLists.txt  README.md
lib/bf/docs/: LORE.md  SPECS.md
lib/bf/inc/bf/: interpreter.h  jit.h  parser.h  runner.h
lib/bf/inc/bf/engine/: glue.h  interpreter.h  jit.h
lib/bf/inc/bf/ui/: cli.h
lib/bf/src/: interpreter.c  jit.c  parser.c  runner.c
lib/bf/src/engine/: interpreter.c  jit.c
lib/bf/src/ui/: cli.c
lib/c8/: CMakeLists.txt  README.md
lib/c8/inc/c8/: interpreter.h  runner.h
lib/c8/src/: interpreter.c  runner.c
lib/util/: CMakeLists.txt  README.md
lib/util/inc/util/: defines.h  dynarray.h  file.h  ini.h  meta.h
lib/util/src/: dynarray.c  file.c  ini.c  meta.c
samples/bf/: bsort.b  collatz.b  collatz.in  factor.b  factor.in  factorial2.b  impeccable.b  isort.b  mandlebrot.b  sierpinski.b  test.b  wc.b  xmastree.b
scripts/: bf_parse_performance_log.awk
src/: main.c
test/: bf_parser.h  dynarray.h  main.c
